--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta property="og:title" content="wuv.wtf" />
+    <meta property="og:description" content="wuvvv" />
+    <meta
+      property="og:image"
+      content="https://twemoji.maxcdn.com/v/13.0.1/72x72/2764.png"
+    />
 
     <title>Svelte app</title>
 
