--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,13 @@
       content="https://twemoji.maxcdn.com/v/13.0.1/72x72/2764.png"
     />
 
-    <title>Svelte app</title>
+    <title>wuvvv</title>
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://twemoji.maxcdn.com/v/13.0.1/72x72/2764.png"
+    />
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="build/bundle.css" />
 
